--- a/homepage.html
+++ b/homepage.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Readly Template</title>
-  <link rel="stylesheet" href="homepage.css" />
+  <title>User homepage</title>
+  <link rel="stylesheet" href="css/homepage.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 
@@ -15,12 +15,12 @@
         <img src="Images\logo.png" alt="Readly Logo" />
       </div>
       <nav class="nav">
-        <a href="#" onclick="toggleSidebar()"><img class="icon" src="Images\dashboard.png" alt="Dashboard Icon" /><span>Dashboard</span></a>
-        <a href="#" onclick="toggleSidebar()"><img class="icon" src="Images\Library.png" alt="Library Icon" /><span>Library</span></a>
-        <a href="#" onclick="toggleSidebar()"><img class="icon" src="Images\Details.png" alt="Details Icon" /><span>Book Details</span></a>
-        <a href="#" onclick="toggleSidebar()"><img class="icon" src="Images\Track.png" alt="Track Icon" /><span>Track and Record</span></a>
-        <a href="#" onclick="toggleSidebar()"><img class="icon" src="Images\Support.png" alt="Support Icon" /><span>Support Page</span></a>
-        <a href="#" onclick="toggleSidebar()"><img class="icon" src="Images\settings.png" alt="Settings Icon" /><span>Settings</span></a>       
+        <a href="homepage.html" onclick="toggleSidebar()"><img class="icon" src="Images\dashboard.png" alt="Dashboard Icon" /><span>Dashboard</span></a>
+        <a href="librarypage.html" onclick="toggleSidebar()"><img class="icon" src="Images\Library.png" alt="Library Icon" /><span>Library</span></a>
+        <a href="bookdetails.html" onclick="toggleSidebar()"><img class="icon" src="Images\Details.png" alt="Details Icon" /><span>Book Details</span></a>
+        <a href="track&record.html" onclick="toggleSidebar()"><img class="icon" src="Images\Track.png" alt="Track Icon" /><span>Track and Record</span></a>
+        <a href="support.html" onclick="toggleSidebar()"><img class="icon" src="Images\Support.png" alt="Support Icon" /><span>Support Page</span></a>
+        <a href="setting.html" onclick="toggleSidebar()"><img class="icon" src="Images\settings.png" alt="Settings Icon" /><span>Settings</span></a>       
       </nav>
       </nav>
       <div class="sign-out">
